k8s/mycriticmatch/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycriticmatch
  namespace: mycriticmatch
spec:
  selector:
    matchLabels:
      app: mycriticmatch
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mycriticmatch
    spec:
      containers:
      - name: mycriticmatch
        image: charlieegan3/mycriticmatch:f423a3df0107b54d82a0c5acf66e5faa
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "50Mi"
            cpu: "100m"
          limits:
            memory: "50Mi"
            cpu: "100m"
