k8s/mycriticmatch/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mycriticmatch
  labels:
    app: mycriticmatch
  namespace: mycriticmatch
spec:
  type: ClusterIP
  selector:
    app: mycriticmatch
  ports:
    - name: http
      protocol: TCP
      port: 80
